rifacimenti grafici "popular courses" ( da rifinire)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Master study - home</title>
+        <link rel="shortcut icon" href="img/favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- fontawesome -->
         <script src="https://kit.fontawesome.com/b1053c2d89.js" crossorigin="anonymous"></script>
         <!-- vue -->
@@ -70,20 +72,31 @@
                     <nav id="header-bottom">
                         <div id="logo">
                             <img src="img/MasterStudy_logo.svg" alt="">
+                        </div>
+                        <div id="">
                             <label for="">
                                 <i class="fas fa-search"></i>
                             </label>
                             <input type="text" placeholder="Cerca" value="">
                         </div>
                         <div id="">
-                            <i></i>
-                            <p class="text-capitalize">become an istructor</p>
+                            <i class="fas fa-bullhorn"></i>
+                            <p class="text-capitalize d-inline-block">
+                                become an istructor
+                            </p>
                         </div>
                         <div id="">
-                            <i></i>
-                            <p class="text-capitalize">for enterprise</p>
+                            <i class="fas fa-briefcase"></i>
+                            <p class="text-capitalize d-inline-block">
+                                for enterprise
+                            </p>
                         </div>
-                        <button type="button" class="btn-secondary" name="button">login</button>
+                        <div id="login">
+                            <i class="fas fa-user"></i>
+                            <button type="button" class="btn-secondary" name="button">
+                                login
+                            </button>
+                        </div>
                         <button  class="text-uppercase btn-primary"type="button" name="button">sign up</button>
 
 
@@ -95,7 +108,7 @@
                 <section id="jumbotron">
                     <div class="container">
                         <div class="row ">
-                            <div id="jumbo-title" class="col-md-6 text-center">
+                            <div id="jumbo-title" class="col-md-6 ">
                                 <h1>start invensting in you</h1>
                                 <p>
                                     with over 1200 courses in 18 subjects, you're guaranteed to find
@@ -179,18 +192,17 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <h2>
-                                    limitless learning more possibilities
-                                </h2>
-                                <p>
-                                    online courses open the opportunity for learning to almost anyone, regardless of their sheduling committents.
-                                </p>
-                                <button class="btn-primary text-uppercase" type="button" name="button">
-                                    read more
-                                </button>
-                            </div>
-                            <div class="col-md-6">
-                                <img src="" alt="">
+                                <div id="read-more-text">
+                                    <h2>
+                                        limitless learning more possibilities
+                                    </h2>
+                                    <p>
+                                        online courses open the opportunity for learning to almost anyone, regardless of their sheduling committents.
+                                    </p>
+                                    <button class="btn-primary text-uppercase" type="button" name="button">
+                                        read more
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -208,8 +220,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
-                                <ul class="d-flex flex-row">
+                            <div class="col-md-12">
+                                <ul class=" text-center d-flex flex-row justify-content-around">
                                     <li>
                                         all categories
                                     </li>
@@ -219,12 +231,23 @@
                                     <li>
                                         exercise
                                     </li>
-                                    <li></li>
+                                    <li>
+                                        material design
+                                    </li>
+                                    <li>
+                                        music
+                                    </li>
+                                    <li>
+                                        photography
+                                    </li>
+                                    <li>
+                                        software developement
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
                                     <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
                                     <small class="text-capitalize">
@@ -241,9 +264,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
-                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <img src="img/cat_2-272x161.jpg" alt="">
                                     <small class="text-capitalize">
                                         apache
                                     </small>
@@ -258,9 +281,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
-                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <img src="img/course-preview-272x161.jpg" alt="">
                                     <small class="text-capitalize">
                                         apache
                                     </small>
@@ -275,9 +298,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
-                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <img src="img/photo-1496307042754-b4aa456c4a2d-272x161.jpeg" alt="">
                                     <small class="text-capitalize">
                                         apache
                                     </small>
@@ -292,9 +315,144 @@
                                     </div>
                                 </div>
                             </div>
-                            <section>
-
-                            </section>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1416339134316-0e91dc9ded92-scaled-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/cathryn-lavery-67852-unsplash-272x161.jpg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1475452779376-caebfb988090-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/cristian-grecu-762012-unsplash-min-scaled-272x161.jpg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/landscape-272x161.jpg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/12345-1-272x161.png" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/jakob-owens-198234-unsplash-min-1-272x161.png" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/promo_tf-272x161.jpg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
