--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
                                     <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
                                     <small class="text-capitalize">
@@ -523,9 +523,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
-                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <img src="img/cat_2-272x161.jpg" alt="">
                                     <small class="text-capitalize">
                                         apache
                                     </small>
@@ -540,9 +540,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
-                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <img src="img/course-preview-272x161.jpg" alt="">
                                     <small class="text-capitalize">
                                         apache
                                     </small>
@@ -557,9 +557,43 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12">
+                            <div class="col-md-2 col-xs-12">
                                 <div class="card">
-                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <img src="img/photo-1496307042754-b4aa456c4a2d-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1416339134316-0e91dc9ded92-scaled-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-xs-12">
+                                <div class="card">
+                                    <img src="img/cathryn-lavery-67852-unsplash-272x161.jpg" alt="">
                                     <small class="text-capitalize">
                                         apache
                                     </small>
@@ -575,39 +609,51 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="arrow-box">
+                                    <i class="fas fa-chevron-left"></i>
+                                </div>
+                                <div class="arrow-box">
+                                    <i class="fas fa-chevron-right"></i>
+                                </div>
+                            </div>
+                        </div>
                 </section>
                 <section id="call-to-action">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="col-md-4">
-                                    <img src="img/image_box_1-221x231.png" alt="">
-                                </div>
-                                <div class="col-md-8">
-                                    <h2>become an instructor</h2>
-                                    <p>
-                                        teach what you love. Masterstudy gives you
-                                        the tools to create the courses.
-                                    </p>
-                                    <button type="button" name="button" class="text-uppercase">
-                                        start teaching
-                                    </button>
+                                <div id="cat-istructor">
+                                    <div class="col-md-4">
+                                        <img src="img/image_box_1-221x231.png" alt="">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <h2>become an instructor</h2>
+                                        <p>
+                                            teach what you love. Masterstudy gives you
+                                            the tools to create the courses.
+                                        </p>
+                                        <button type="button" name="button" class="text-uppercase">
+                                            start teaching
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="col-md-4">
-                                    <img src="img/image_box_2-234x231.png" alt="">
-                                </div>
-                                <div class="col-md-8">
-                                    <h2>setup for business</h2>
-                                    <p>
-                                        get unlimited access to 2,500 of Udemy's top courses for your team
-                                    </p>
-                                    <button class="text-uppercase" type="button" name="button">
-                                        doing business
-                                    </button>
+                                <div id="cta-business">
+                                    <div class="col-md-4">
+                                        <img src="img/image_box_2-234x231.png" alt="">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <h2>setup for business</h2>
+                                        <p>
+                                            get unlimited access to 2,500 of Udemy's top courses for your team
+                                        </p>
+                                        <button class="text-uppercase" type="button" name="button">
+                                            doing business
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -639,8 +685,12 @@
                         <!-- Footer (sezione about) -->
                         <div class="col-md-3">
                             <h4>about</h4>
-                            <p>mastersudy is education wordpress theme featured by learning management system (LMS) for online education.
-                            developed by
+                            <p>
+                                <a href="#" class="text-capitalize">
+                                    mastersudy
+                                </a>
+                                 is education wordpress theme featured by learning management system (LMS) for online education.
+                                 developed by
                             <a href="#">
                                 stylemixThemes
                             </a>
