--- a/index.html
+++ b/index.html
@@ -466,8 +466,37 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="row">
+                            <ul>
+                                <li>
+                                    <p>2000</p>
+                                    <small class="text-uppercase">
+                                        students
+                                    </small>
+                                </li>
+                                <li>
+                                    <p>950</p>
+                                    <small class="text-upppercase">
+                                        courses
+                                    </small>
+                                </li>
+                                <li>
+                                    <p>1600</p>
+                                    <small class="text-uppercase">
+                                        hours video
+                                    </small>
+                                </li>
+                                <li>
+                                    <p>150</p>
+                                    <small class="text-uppercase">
+                                        countries reached
+                                    </small>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
+
 
                 <!-- Sezione newsletter  -->
                 <section id="newsletter">
