miglioramento griglia foto-categorie

--- a/index.html
+++ b/index.html
@@ -165,23 +165,35 @@
                         <div class="row">
                             <div class="col-md-8 col-xs-12">
                                 <img src="img/cat_1-770x375.jpg" alt="">
+                                <p class="float-left">software developement</p>
+                                <small class="float-right"> 5 courses</small>
                             </div>
 
                             <div class="col-md-4 col-xs-12 ">
                                 <img src="img/cat_2-370x155.jpg" alt="">
+                                <p class="float-left">art</p>
+                                <small class="float-right"> 8 courses</small>
                                 <img src="img/cat_3-370x155.jpg" alt="">
+                                <p class="float-left">material design</p>
+                                <small class="float-right"> 5 courses</small>
                             </div>
 
                         </div>
                         <div class="row">
                             <div class="col-md-4">
                                 <img src="img/cat_5-370x155.jpg" alt="">
+                                <p class="float-left">music</p>
+                                <small class="float-right"> 5 courses</small>
                             </div>
                             <div class="col-md-4">
                                 <img src="img/cat_4-370x155.jpg" alt="">
+                                <p class="float-left">exercise</p>
+                                <small class="float-right"> 7 courses</small>
                             </div>
                             <div class="col-md-4">
                                 <img src="img/cat_6-370x155.jpg" alt="">
+                                <p class="float-left">photography</p>
+                                <small class="float-right"> 4 courses</small>
                             </div>
                         </div>
                     </div>
@@ -454,8 +466,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <button  class=" text-center text-uppercase btn-primary"type="button" name="button">
+                                    show all
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </section>
+
                 <!-- /Sezione recent courses -->
                 <section id="we-proud">
                     <div class="container">
@@ -495,6 +515,7 @@
                             </ul>
                         </div>
                     </div>
+
                 </section>
 
 
@@ -640,11 +661,13 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="arrow-box">
-                                    <i class="fas fa-chevron-left"></i>
-                                </div>
-                                <div class="arrow-box">
-                                    <i class="fas fa-chevron-right"></i>
+                                <div class="navigation-box">
+                                    <div class="arrow-box">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </div>
+                                    <div class="arrow-box">
+                                        <i class="fas fa-chevron-right"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -663,7 +686,7 @@
                                             teach what you love. Masterstudy gives you
                                             the tools to create the courses.
                                         </p>
-                                        <button type="button" name="button" class="text-uppercase">
+                                        <button type="button" name="button" class="text-uppercase btn-primary">
                                             start teaching
                                         </button>
                                     </div>
@@ -679,7 +702,7 @@
                                         <p>
                                             get unlimited access to 2,500 of Udemy's top courses for your team
                                         </p>
-                                        <button class="text-uppercase" type="button" name="button">
+                                        <button class="text-uppercase btn-primary" type="button" name="button">
                                             doing business
                                         </button>
                                     </div>
