restilyng button newsletter

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                                     your e-mail address
                                 </h4>
                                 <input type="text" placeholder="Enter you email" value="">
-                                <button class="text-uppercase" type="button" name="button">
+                                <button class="text-uppercase" id="newsletter-button" type="button" name="button">
                                     subscribe
                                 </button>
                             </div>
