miglioramento sezione "WE PROUD"

--- a/index.html
+++ b/index.html
@@ -683,8 +683,7 @@
                                     <div class="col-md-8">
                                         <h2>become an instructor</h2>
                                         <p>
-                                            teach what you love. Masterstudy gives you
-                                            the tools to create the courses.
+                                            teach what you love. Masterstudy gives you the tools to create the courses.
                                         </p>
                                         <button type="button" name="button" class="text-uppercase btn-primary">
                                             start teaching
