miglioramento sezione 'WE PROUD' v2

--- a/index.html
+++ b/index.html
@@ -490,25 +490,25 @@
                             <ul>
                                 <li>
                                     <p>2000</p>
-                                    <small class="text-uppercase">
+                                    <small>
                                         students
                                     </small>
                                 </li>
                                 <li>
                                     <p>950</p>
-                                    <small class="text-upppercase">
+                                    <small>
                                         courses
                                     </small>
                                 </li>
                                 <li>
                                     <p>1600</p>
-                                    <small class="text-uppercase">
+                                    <small >
                                         hours video
                                     </small>
                                 </li>
                                 <li>
                                     <p>150</p>
-                                    <small class="text-uppercase">
+                                    <small >
                                         countries reached
                                     </small>
                                 </li>
